TBC - 0.36.0
- [NEW] - WSJTX: Added support to received ADIF QSO Log record
- [NEW] - Frequency input boxes PageUp/Dn switches the band (issue #360)
- [NEW] - CTRL + PgUp/Dn switch band on the connected rig - global shortcut (issue #360)
- [NEW] - Added number of filtered QSOs (issue #374)
- [NEW] - Logbook filters change color when enabled

2024/05/21 - 0.35.2
- Improved delete performance; added delete progress bar (issue #351)
- Fixed Password with plus is incorrectly sent to online services (issue #366)
- Fixed Compilation issue under v4.6 (issue #368)
- Fixed Network Rig configuration is not saved (issue #370)

2024/05/06 - 0.35.1
- Fixed Free QRZ callbook - Name is not populating (issue #363)
- Fixed Incorrect CW segment freqs (issue #365)

2024/05/03 - 0.35.0
- [NEW] - Added Rot Interface PSTRotator Network
- [NEW] - Added QSO/QSL Since option to eQSL Dialog
- [NEW] - Bandmap - Current Mode segment visualisation
- [NEW] - CW Console - Added Word/Whole mode switch
- [NEW] - Added Callbook Profile Image Widget
- [NEW] - ASCII conversion based on Text-Unidecode/iconv algorithm (issue #316 #350)
- [NEW] - ITU/CQ Zones can be defined in Station Profile (issue #358)
- [CHANGED] - Spacebar is used as a focus changer for fields where space is not allowed
- [CHANGED] - Focus does not select text in the input fields
- [CHANGED] - Force XCB under Linux Wayland
- [CHANGED] - Bandmap - Added Callsign/Freq/Mode to tooltip (issue #355)
- Fixed incorrect ADIF date format for clublog_qso_upload_date (issue #342)
- Fixed The last name from Callbooks queries (issue #346)

2024/03/25 - 0.34.0
- [NEW] - Rotator Widget - Azimuth by Clicking
- [NEW] - Rotator Widget - QSO button provides Short/Long Path (issue #330)
- [NEW] - Equipment Menu - Added Keep Options between application restart (issue #331)
- Fixed TCI - Thetis Connection issue (issue #327)
- Fixed TCI - Spots To Rig are not displayed (issue #328)
- Fixed Bandmap unintentionally emits frequency labels (issue #333)